@@ -36,7 +36,7 @@ framework.
 
 </P>
 
-<P> 
+<P>
 
 <LI> <A HREF="http://www.cs.wustl.edu/~schmidt/CIAO.html">CIAO</a>
 (Component Integrated ACE ORB) is an open-source implementation of the
@@ -63,7 +63,8 @@ document to decide which version below is more appropriate for your
 case.  You may want to understand the DOC group's <A
 HREF="https://svn.dre.vanderbilt.edu/viewvc/Middleware/trunk/ACE/docs/ACE-bug-process.html?revision=HEAD">
 bug fixing policies</A> when you make this decision.
-
+</P>The full packages to contain all sources with pre generated makefiles for GNU make, Visual C++ 7.1/8.0, Borland
+C++ make. The sources only packes just contain the sources, you have to generate your own makefiles with MPC.
 </P>
 
 <UL>
@@ -73,84 +74,111 @@ of the ACE, TAO, and CIAO beta kit is available for
     download below.  <P>
 
 <TABLE BORDER="4">
-  <TR><TH>Filename</TH><TH>Description</TH><TH>Download</TH></TR>
+  <TR><TH>Filename</TH><TH>Description</TH><TH>Full</TH><TH>Sources only</TH></TR>
   <TR><TD>ACE+TAO+CIAO.tar.gz</TD>
       <TD>ACE+TAO+CIAO (tar+gzip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE+TAO+CIAO.tar.gz">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/ACE+TAO-distribution/ACE+TAO+CIAO.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO.tar.gz">FTP</A>]
+      </TD>
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO-src.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO-src.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE+TAO+CIAO.tar.bz2</TD>
       <TD>ACE+TAO+CIAO (tar+bzip2 format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE+TAO+CIAO.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/ACE+TAO-distribution/ACE+TAO+CIAO.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO.tar.bz2">FTP</A>]
+      </TD>
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO-src.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO-src.tar.bz2">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE+TAO+CIAO.zip</TD>
       <TD>ACE+TAO+CIAO (zip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE+TAO+CIAO.zip">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/ACE+TAO-distribution/ACE+TAO+CIAO.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO.zip">FTP</A>]
+      </TD>
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO-src.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO+CIAO-src.zip">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE+TAO.tar.gz</TD>
       <TD>ACE+TAO (tar+gzip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE+TAO.tar.gz">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/ACE+TAO-distribution/ACE+TAO.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO.tar.gz">FTP</A>]
+      </TD>
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO-src.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO-src.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE+TAO.tar.bz2</TD>
       <TD>ACE+TAO (tar+bzip2 format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE+TAO.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/ACE+TAO-distribution/ACE+TAO.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO.tar.bz2">FTP</A>]
+      </TD>
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO-src.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO-src.tar.bz2">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE+TAO.zip</TD>
       <TD>ACE+TAO (zip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE+TAO.zip">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/ACE+TAO-distribution/ACE+TAO.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO.zip">FTP</A>]
+      </TD>
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO-src.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE+TAO-src.zip">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-html.tar.gz</TD>
       <TD>Doxygen documentation for ACE+TAO+CIAO (tar+gzip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE-html.tar.gz">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/ACE+TAO-distribution/ACE-html.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE-html.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE-html.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-html.tar.bz2</TD>
       <TD>Doxygen documentation for ACE+TAO+CIAO (tar+bzip2 format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE-html.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/ACE+TAO-distribution/ACE-html.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE-html.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE-html.tar.bz2">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-html.zip</TD>
       <TD>Doxygen documentation for ACE+TAO+CIAO (zip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE-html.zip">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/ACE+TAO-distribution/ACE-html.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE-html.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE-html.zip">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE.tar.gz</TD>
       <TD>ACE only (tar+gzip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE.tar.gz">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/ACE+TAO-distribution/ACE.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE.tar.gz">FTP</A>]
+      </TD>
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE-src.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE-src.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE.tar.bz2</TD>
       <TD>ACE only (tar+bzip2 format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/ACE+TAO-distribution/ACE.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE.tar.bz2">FTP</A>]
+      </TD>
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE-src.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE-src.tar.bz2">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE.zip</TD>
       <TD>ACE only (zip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE.zip">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/ACE+TAO-distribution/ACE.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE.zip">FTP</A>]
+      </TD>
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE-src.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/ACE+TAO-distribution/ACE-src.zip">FTP</A>]
       </TD>
   </TR>
 </TABLE>
 
 <P>
-  Patches between each beta kit are also available via FTP at
-  <A HREF="ftp://deuce.doc.wustl.edu/pub/ACE+TAO-distribution/diffs">this location</A>.
+  Patches between older beta kit versions are available via FTP at
+  <A HREF="ftp://download.dre.vanderbilt.edu/diffs">this location</A>.
 </P>
 
 <LI> <B>Latest Release.</B> The latest release is ACE 5.5, TAO 1.5, and CIAO 0.5
@@ -160,50 +188,50 @@ of the ACE, TAO, and CIAO beta kit is available for
   <TR><TH>Filename</TH><TH>Description</TH><TH>Download</TH></TR>
   <TR><TD>ACE-5.5+TAO-1.5+CIAO-0.5.tar.gz</TD>
       <TD>ACE+TAO+CIAO (tar+gzip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE-5.5+TAO-1.5+CIAO-0.5.tar.gz">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/previous_versions/ACE-5.5+TAO-1.5+CIAO-0.5.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.5+TAO-1.5+CIAO-0.5.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.5+TAO-1.5+CIAO-0.5.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-5.5+TAO-1.5+CIAO-0.5.zip</TD>
       <TD>ACE+TAO (zip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE-5.5+TAO-1.5+CIAO-0.5.zip">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/previous_versions/ACE-5.5+TAO-1.5+CIAO-0.5.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.5+TAO-1.5+CIAO-0.5.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.5+TAO-1.5+CIAO-0.5.zip">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-5.5+TAO-1.5.tar.gz</TD>
       <TD>ACE+TAO (tar+gzip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE-5.5+TAO-1.5.tar.gz">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/previous_versions/ACE-5.5+TAO-1.5.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.5+TAO-1.5.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.5+TAO-1.5.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-5.5+TAO-1.5.zip</TD>
       <TD>ACE+TAO (zip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE-5.5+TAO-1.5.zip">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/previous_versions/ACE-5.5+TAO-1.5.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.5+TAO-1.5.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.5+TAO-1.5.zip">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-5.5-html.tar.gz</TD>
       <TD>Doxygen documentation for ACE+TAO (tar+gzip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE-5.5-html.tar.gz">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/previous_versions/ACE-5.5-html.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.5-html.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.5-html.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-5.5-html.zip</TD>
       <TD>Doxygen documentation for ACE+TAO (zip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE-5.5-html.zip">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/previous_versions/ACE-5.5-html.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.5-html.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.5-html.zip">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-5.5.tar.gz</TD>
       <TD>ACE only (tar+gzip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE-5.5.tar.gz">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/previous_versions/ACE-5.5.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.5.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.5.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-5.5.zip</TD>
       <TD>ACE only (zip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE-5.5.zip">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/previous_versions/ACE-5.5.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.5.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.5.zip">FTP</A>]
       </TD>
   </TR>
 </TABLE>
@@ -212,59 +240,59 @@ of the ACE, TAO, and CIAO beta kit is available for
 
 <LI> <A NAME="stable-beta"></A><B>Latest BFO Beta.</B> The BFO beta
 for the latest release of ACE 5.5 and TAO 1.5 is, ACE 5.5.1 and TAO
-1.5.1 (ACE+TAO x.5.1). 
+1.5.1 (ACE+TAO x.5.1).
 
-please use the links below to download it. 
+please use the links below to download it.
 <TABLE BORDER="4">
   <TR><TH>Filename</TH><TH>Description</TH><TH>Download</TH></TR>
   <TR><TD>ACE-5.5.1+TAO-1.5.1+CIAO-0.5.1.tar.gz</TD>
       <TD>ACE+TAO+CIAO (tar+gzip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE-5.5.1+TAO-1.5.1+CIAO-0.5.1.tar.gz">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/previous_versions/ACE-5.5.1+TAO-1.5.1+CIAO-0.5.1.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.5.1+TAO-1.5.1+CIAO-0.5.1.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.5.1+TAO-1.5.1+CIAO-0.5.1.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-5.5.1+TAO-1.5.1+CIAO-0.5.1.zip</TD>
       <TD>ACE+TAO (zip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE-5.5.1+TAO-1.5.1+CIAO-0.5.1.zip">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/previous_versions/ACE-5.5.1+TAO-1.5.1+CIAO-0.5.1.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.5.1+TAO-1.5.1+CIAO-0.5.1.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.5.1+TAO-1.5.1+CIAO-0.5.1.zip">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-5.5.1+TAO-1.5.1.tar.gz</TD>
       <TD>ACE+TAO (tar+gzip format)</TD>
   <TR><TD>ACE-5.5.1+TAO-1.5.1.tar.gz</TD>
       <TD>ACE+TAO (tar+gzip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE-5.5.1+TAO-1.5.1.tar.gz">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/previous_versions/ACE-5.5.1+TAO-1.5.1.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.5.1+TAO-1.5.1.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.5.1+TAO-1.5.1.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-5.5.1+TAO-1.5.1.zip</TD>
       <TD>ACE+TAO (zip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE-5.5.1+TAO-1.5.1.zip">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/previous_versions/ACE-5.5.1+TAO-1.5.1.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.5.1+TAO-1.5.1.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.5.1+TAO-1.5.1.zip">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-5.5.1-html.tar.gz</TD>
       <TD>Doxygen documentation for ACE+TAO (tar+gzip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE-5.5.1-html.tar.gz">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/previous_versions/ACE-5.5.1-html.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.5.1-html.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.5.1-html.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-5.5.1-html.zip</TD>
       <TD>Doxygen documentation for ACE+TAO (zip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE-5.5.1-html.zip">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/previous_versions/ACE-5.5.1-html.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.5.1-html.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.5.1-html.zip">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-5.5.1.tar.gz</TD>
       <TD>ACE only (tar+gzip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE-5.5.1.tar.gz">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/previous_versions/ACE-5.5.1.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.5.1.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.5.1.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-5.5.1.zip</TD>
       <TD>ACE only (zip format)</TD>
-      <TD>[<A HREF="http://deuce.doc.wustl.edu/ACE-5.5.1.zip">HTTP</A>]
-          [<A HREF="ftp://deuce.doc.wustl.edu/pub/previous_versions/ACE-5.5.1.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.5.1.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.5.1.zip">FTP</A>]
       </TD>
   </TR>
 </TABLE>
@@ -272,7 +300,7 @@ please use the links below to download it.
 </UL>
 <P>
   Older versions of ACE+TAO are also available via HTTP at  <A
-  HREF="http://deuce.doc.wustl.edu/old_distribution">this location</A>
+  HREF="http://download.dre.vanderbilt.edu/previous_versions">this location</A>
   . This location has a few of the previous major and minor
   releases. This location will house all of the releases and betas
   released after ACE+TAO-5.2+1.2.
